[tool.poetry]
name = "sport-flask"
version = "0.0.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.1.2"
flake8 = "^4.0.1"
pylint = "^2.14.4"
pylint-flask = "^0.6"
pylint-flask-sqlalchemy = "^0.2.0"
black = "^22.6.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
